# Grade-Book

./: CMakeLists.txt  Project2##.sln
Project2##/: Gradebook.cpp  Gradebook.h  Project2##.vcxproj  Project2##.vcxproj.filters  course.cpp  course.h  student.cpp  student.h
Project2##/x64/Debug/: Project2##.exe.recipe  Project2##.ilk  vc143.idb
Project2##/x64/Debug/Project2##.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project2##.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
